--- a/app/src/main/res/layout/activity_login_test_.xml
+++ b/app/src/main/res/layout/activity_login_test_.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Activity_Login">
 
-    <com.example.feedback.LoginVideoView
+    <widget.LoginVideoView
         android:id="@+id/videoview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
