--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity_signUp">
+    tools:context=".Activity_SignUp">
 
-    <com.example.feedback.LoginVideoView
+    <widget.LoginVideoView
         android:id="@+id/videoview1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
