--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,6 @@
     <dimen name="zero">0dp</dimen>
 
     <dimen name="input_account_edit_text_height">50dp</dimen>
+    <dimen name="tab_indicator_height">5dp</dimen>
 
 </resources>
