--- a/app/src/main/res/layout/activity_assessment_comment.xml
+++ b/app/src/main/res/layout/activity_assessment_comment.xml
@@ -1,51 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1">
 
-    <Button
-        android:id="@+id/btn_assessment_comment_done"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
-        android:onClick="commentDone"
-        android:text="Done"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_assessment_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        toolbar:titleTextColor="@color/white"
+        app:titleTextAppearance="@style/ActionBarTitle">
+    </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/btn_assessment_comment_done"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        android:layout_below="@id/toolbar_assessment_comment"
+        android:fillViewport="true" >
 
-        <ExpandableListView
-            android:id="@+id/elv_main"
-            android:layout_width="0dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scrollbars="none"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"/>
+            android:orientation="vertical"
+            android:clipToPadding="false">
 
-        <ListView
-            android:id="@+id/lv_main"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:scrollbars="none"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
+            <Button
+                android:id="@+id/btn_assessment_comment_done"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingRight="16dp"
+                android:paddingLeft="16dp"
+                android:onClick="commentDone"
+                android:text="Done"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:background="@color/colorPrimary"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/btn_assessment_comment_done"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+                <ExpandableListView
+                    android:id="@+id/elv_main"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scrollbars="vertical"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"/>
+
+                <ListView
+                    android:id="@+id/lv_main"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:scrollbars="vertical"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
