--- a/app/src/main/res/layout/activity_send_report_group.xml
+++ b/app/src/main/res/layout/activity_send_report_group.xml
@@ -66,7 +66,7 @@
                     android:paddingLeft="16dp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/button_sendStudent_sendReportGroup"
@@ -80,7 +80,7 @@
                     android:paddingLeft="16dp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/button_sendBoth_sendReportGroup"
@@ -95,7 +95,7 @@
                     android:textSize="20sp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/btn_finish_sendReportGroup"
@@ -109,7 +109,7 @@
                     android:paddingLeft="16dp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
             </LinearLayout>
 
             <RelativeLayout
